--- a/Views/Characters/Index.cshtml
+++ b/Views/Characters/Index.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Сharacters";
 }
+<div>
+    <ul class="list_views">
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="Index">Игроки</a>
+        </li>
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Characters" asp-action="Index">Персонажи</a>
+        </li>
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Levels" asp-action="Index">Уровни</a>
+        </li>
+    </ul>
+</div>
 
 <h2>Персонажи</h2>
-
-<p>че делать</p>
