--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,5 +4,7 @@
 
 <h2>О сайте</h2>
 
-<p>чето</p>
+<div class="Light_purple_block">
+    <p>На данном сайте можно посмотреть рейтинг игроков</p>
+</div>
 
