--- a/Views/Home/Contacts.cshtml
+++ b/Views/Home/Contacts.cshtml
@@ -4,6 +4,9 @@
 
 <h2>Контакты</h2>
 
-<p>уляля</p>
-<p class="text-dark"> мукомукмьук</p>
+<div class="Light_purple_block">
+    <p>ФИО разработчика: Курапова Анна Сергеевна</p>
+    <p>Телефон: 8(9603)-88-38-38</p>
+    <p>Адрес: г. Москва, ул. Ленина, д.33</p>
+</div>
 
