--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #7A7CC9;
 }
 
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
@@ -28,4 +29,28 @@ body {
 
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
+}
+
+.list_views {
+    display: flex;
+    gap: 100px;
+    font-size: 28px;
+    justify-content: center;
+}
+
+ul {
+    list-style: none;
+    margin: 0; 
+    padding: 0;
+}
+
+.Light_purple_block {
+    background-color: #B2B3E0;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.bf{
+    font-family:'Poor Richard';
+    font-weight:600;
 }
