--- a/Views/Levels/Index.cshtml
+++ b/Views/Levels/Index.cshtml
@@ -1,5 +1,18 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Levels";
 }
+<div>
+    <ul class="list_views">
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Players" asp-action="Index">Игроки</a>
+        </li>
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Characters" asp-action="Index">Персонажи</a>
+        </li>
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Levels" asp-action="Index">Уровни</a>
+        </li>
+    </ul>
+</div>
+
+<h2>Уровни</h2>
