--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Игра </title> 
+    <title>@ViewData["Title"] - Game </title> 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MvcMovie.styles.css" asp-append-version="true" />
@@ -12,9 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Players" asp-action="Index"> Игроки</a>
-                <a class="navbar-brand" asp-area="" asp-controller="Levels" asp-action="Index"> Уровни </a>
-                <a class="navbar-brand" asp-area="" asp-controller="Characters" asp-action="Index"> Персонажи </a>
+                <a class="navbar-brand" asp-area="" asp-controller="Players" asp-action="Index">Game</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Игра - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Game - <a asp-area="" asp-controller="Home" asp-action="Privacy">Политика конфедициальности</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.js"></script>
